Fixed CSS related to form fields wrapping too early, fixes #21

--- a/less/app.less
+++ b/less/app.less
@@ -384,6 +384,14 @@ input.ng-valid.ng-dirty {
   background-position-y: 50%;
 }
 
+form[name="loginForm"],
+form[name="registerForm"]
+{
+  .form-group {
+    max-width: 250px;
+  }
+}
+
 .form-group {
   &.inline {
     float: left;
@@ -391,7 +399,6 @@ input.ng-valid.ng-dirty {
       margin-right: 10px;
     }
   }
-  max-width: 250px;
 
   &.large {
     max-width: 400px;
